Add Controller for every endpoint
